# hpp-affordance

./: .gitlab-ci.yml  CMakeLists.txt  README.md
include/hpp/affordance/: CMakeLists.txt  affordance-extraction.hh  fwd.hh  operations.hh
src/: CMakeLists.txt  affordance-extraction.cc
tests/: CMakeLists.txt  test-one-triangle1.cc  test-one-triangle2.cc  test-operations.cc  test-oriented-triangles1.cc  test-oriented-triangles2.cc
